tests/fixtures/sample-js-project-positive/shared/utils/src/errors/uncaught-d849899f.ts
export function failing_d849899f(): never {
  throw new Error("ouch-d849899f");
}
